force-app/main/default/objects/User/fields/User_Cadence_Type_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Cadence_Type_Group__c</fullName>
    <formula>IF(AND(ISPICKVAL( NSS_Team__c,&apos;Inbound&apos;),CONTAINS(UserRole.Name,&apos;VIRTUAL SALES CORE&apos;)),&apos;Sales-All Inbound&apos;,
IF(AND(ISPICKVAL(Sales_Org__c,&apos;NSS&apos;),CONTAINS(UserRole.Name,&apos;Forms&apos;)),&apos;Sales-All Inbound&apos;,
IF(AND(ISPICKVAL( NSS_Team__c,&apos;Inbound&apos;),CONTAINS(UserRole.Name,&apos;PEO&apos;)),&apos;Sales-All Inbound&apos;,
IF(ISPICKVAL( NSS_Team__c,&apos;Inbound-Oasis&apos;),&apos;Sales-All Inbound&apos;,
User_Cadence_Type__c
))))</formula>
    <label>User Cadence Type Group</label>
    <type>Text</type>
</CustomField>