force-app/main/default/objects/User/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <description>Special Designation for a user</description>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doc Desk - Zone 14 (VF)</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Zone 15 (SH)</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Zone 15 (HP)</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Katina</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Waqar</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Mary</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Virtual 1</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Virtual 2</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Virtual 3</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Virtual 4</fullName>
            </value>
            <value>
                <fullName>Doc Desk - Virtual 5</fullName>
            </value>
            <value>
                <fullName>A-1 Rep</fullName>
            </value>
            <value>
                <fullName>Oracle CPQ User</fullName>
            </value>
            <value>
                <fullName>CA Mandate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>