force-app/main/default/objects/User/fields/UserRoleName__c.field-meta.xml
<CustomField>
    <fullName>UserRoleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the user role - so we don&apos;t have to use an object relationship in formulas</inlineHelpText>
    <label>User Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>