force-app/main/default/objects/User/fields/Zonetxt__c.field-meta.xml
<CustomField>
    <fullName>Zonetxt__c</fullName>
    <description>Populated by Org Structure Trigger (which gets it&apos;s info from WAR)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>