force-app/main/default/objects/User/validationRules/agentsync__AgentSync_NPN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>agentsync__AgentSync_NPN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(agentsync__NPN__c)),
  OR(
    ISNEW(),
    AND(
      NOT(ISNEW()),
      ISCHANGED( agentsync__NPN__c )
    )
  ),
    !REGEX( agentsync__NPN__c ,&quot;^[1-9][0-9]{0}[0-9]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>agentsync__NPN__c</errorDisplayField>
    <errorMessage>A valid NPN number must be all digits with a length greater than or equal to 1 and cannot begin with a zero. Please double check the entered number.</errorMessage>
</ValidationRule>