force-app/main/default/objects/User/validationRules/agentsync__CannotSettoActiveunlessNPNentered.validationRule-meta.xml
<ValidationRule>
    <fullName>agentsync__CannotSettoActiveunlessNPNentered</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISCHANGED(agentsync__AgentSync_Tracking__c),
ISNEW()
),
ISPICKVAL(agentsync__AgentSync_Tracking__c, &quot;Active&quot;),
ISBLANK (agentsync__NPN__c)
)</errorConditionFormula>
    <errorMessage>NPN must be filled in to set NIPR Tracking to Active</errorMessage>
</ValidationRule>