force-app/main/default/objects/User/validationRules/Check_New_User_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_New_User_Profile</fullName>
    <active>false</active>
    <description>Check if the record has the New User Profile. If so, do not let it be saved.</description>
    <errorConditionFormula>((ISNEW() =FALSE) &amp;&amp; (Profile.Name = &apos;New User Profile&apos;))</errorConditionFormula>
    <errorDisplayField>ProfileId</errorDisplayField>
    <errorMessage>You must change the Profile from New User Profile before saving this record.</errorMessage>
</ValidationRule>