force-app/main/default/objects/User/validationRules/Check_New_User_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_New_User_Role</fullName>
    <active>false</active>
    <description>Check to make sure on the update of a record that the New User Role is not still set.</description>
    <errorConditionFormula>((ISNEW() =FALSE) &amp;&amp; ( UserRole.Name = &apos;New User Role&apos;))</errorConditionFormula>
    <errorDisplayField>UserRoleId</errorDisplayField>
    <errorMessage>You must select a Role other than New User Role.</errorMessage>
</ValidationRule>