force-app/main/default/objects/User/validationRules/Cost_Center_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Center_Format</fullName>
    <active>false</active>
    <description>Cost Center should be 4 character with leading zeros</description>
    <errorConditionFormula>NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)) &amp;&amp; LEN( Cost_Center__c ) &lt;&gt;0 &amp;&amp; NOT(REGEX( Cost_Center__c , &quot;\\d{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Cost_Center__c</errorDisplayField>
    <errorMessage>**** Cost Center should be 4 characters with leading zeros ****</errorMessage>
</ValidationRule>