force-app/main/default/objects/User/validationRules/Cost_Center_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Center_Required</fullName>
    <active>true</active>
    <description>Cost Center Required for internal users</description>
    <errorConditionFormula>AND( ISBLANK( Cost_Center__c ),ISPICKVAL(UserType,&apos;Standard&apos;))</errorConditionFormula>
    <errorDisplayField>Cost_Center__c</errorDisplayField>
    <errorMessage>Cost Center is required</errorMessage>
</ValidationRule>