force-app/main/default/objects/User/validationRules/DS_Packages__Validate_Conquer_OOO_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>DS_Packages__Validate_Conquer_OOO_Dates</fullName>
    <active>true</active>
    <description>Ensures that &quot;Out of Office Start&quot; and &quot;Out of Office End&quot; must be populated simultaneously, and that &quot;Out of Office End&quot; must be later that &quot;Out of Office Start&quot;.</description>
    <errorConditionFormula>AND(
   ISNULL(  DS_Packages__Out_of_Office_End__c ),
   NOT( ISNULL( DS_Packages__Out_of_Office_Start__c ) )
)
||
AND(
   ISNULL(  DS_Packages__Out_of_Office_Start__c ),
   NOT( ISNULL( DS_Packages__Out_of_Office_End__c ) )
)
||
DS_Packages__Out_of_Office_Start__c &gt; DS_Packages__Out_of_Office_End__c</errorConditionFormula>
    <errorMessage>When setting Conquer Out of Office Dates, please ensure that both Start and End Date are filled out, and that End Date is later or equal to Start Date.</errorMessage>
</ValidationRule>