force-app/main/default/objects/User/validationRules/EMail_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>EMail_Change</fullName>
    <active>true</active>
    <description>Prevents anyone except system admin, zone assistants or Operations Delegated Administrators from changing email address.</description>
    <errorConditionFormula>AND 
(AND 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)) , ISPICKVAL(UserType,&quot;Standard&quot;) ,  NOT(BEGINS($Profile.Name,&quot;Sales Data Steward&quot;)) ,NOT(BEGINS($Profile.Name,&quot;Core Zone Administration&quot;)),NOT(BEGINS($Profile.Name,&quot;MMS Sales ZSA&quot;)),$Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,$Profile.Name &lt;&gt;&quot;2008-09 MMS Hub Manager - DA&quot;,$Profile.Name &lt;&gt;&quot;MPSC Profile&quot;,$Profile.Name &lt;&gt;&quot;HRS PEO Centric Administration&quot;, $Profile.Name &lt;&gt;&quot;Enterprise Support&quot;,
$Profile.Name &lt;&gt;&quot;HR Essentials&quot;, $Profile.Name &lt;&gt;&quot;2008-09 HRS Premier Support - DA&quot;,$Profile.Name &lt;&gt;&quot;2008-09 HRS Premier Safety Delegated Admin&quot;,$Profile.Name &lt;&gt;&quot;Field Ops Regional Assistant&quot;, $Profile.Name &lt;&gt;&quot;PIA Agency Delegated Admin&quot;, $Profile.Name &lt;&gt;&quot;Credit Risk Analyst&quot;,NOT(BEGINS($Profile.Name, &quot;HRS Regional Sales Admin&quot;)),NOT(BEGINS($Profile.Name,&quot;HNBF Sales Administration&quot;)),$Profile.Name &lt;&gt;&quot;PEO New Business Delegated Admin&quot;,$Profile.Name &lt;&gt;&quot;Sales Enablement&quot;), ISCHANGED( Email))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>** This field can only be changed by the System Administrator, Zone Assistants or Operations Delegated Administrators **</errorMessage>
</ValidationRule>