force-app/main/default/objects/User/validationRules/Non_Paychex_Employee_User_Type_Requird.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Paychex_Employee_User_Type_Requird</fullName>
    <active>true</active>
    <description>When a non-Paychex Employee user is indicated, the user type must be specified</description>
    <errorConditionFormula>Non_Paychex_Employee__c &amp;&amp; ISPICKVAL( Non_Paychex_Employee_User_Type__c , &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Non_Paychex_Employee_User_Type__c</errorDisplayField>
    <errorMessage>**** When a non-Paychex Employee user is indicated, the user type must be specified ****</errorMessage>
</ValidationRule>