force-app/main/default/objects/User/validationRules/Non_Paychex_User_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Paychex_User_cannot_be_edited</fullName>
    <active>true</active>
    <description>Prevent anyone except system admin for changing anything on this user record</description>
    <errorConditionFormula>AND 
( 
NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)) 
,OR(ISPICKVAL(Non_Paychex_Employee_User_Type__c, &apos;Generic User&apos;),ISPICKVAL(Non_Paychex_Employee_User_Type__c, &apos;3rd Party Vendor&apos;),ISPICKVAL(Non_Paychex_Employee_User_Type__c, &apos;Test-Default User&apos;)) 
)</errorConditionFormula>
    <errorMessage>** This record can only be changed by the System Administrator **</errorMessage>
</ValidationRule>