force-app/main/default/objects/User/validationRules/Not_Both_Emp_Num_and_NonEmp.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Both_Emp_Num_and_NonEmp</fullName>
    <active>true</active>
    <description>Users with Employee Numbers can not be Non-Paychex Employees</description>
    <errorConditionFormula>LEN( EmployeeNumber ) &gt; 0 &amp;&amp; Non_Paychex_Employee__c &amp;&amp; NOT( ISPICKVAL( Non_Paychex_Employee_User_Type__c , &apos;Generic User&apos;))</errorConditionFormula>
    <errorMessage>**** Users with Employee Numbers can not be Non-Paychex Employees ****</errorMessage>
</ValidationRule>