force-app/main/default/objects/User/validationRules/NSS_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>NSS_Role</fullName>
    <active>true</active>
    <description>If the User has an NSS Role only an admin can assign a new role</description>
    <errorConditionFormula>ISCHANGED(UserRoleId) &amp;&amp;
PRIORVALUE(HasNSSRole__c)=True &amp;&amp;
NOT($User.ProfileId = &apos;00e30000000mTjP&apos;) &amp;&amp; 
NOT($User.ProfileId = &apos;00e50000000rUMg&apos;) &amp;&amp;
NOT($User.ProfileId = &apos;00e70000001JszN&apos;)</errorConditionFormula>
    <errorMessage>If the User has an NSS Role only an admin can assign a new role</errorMessage>
</ValidationRule>