force-app/main/default/objects/User/validationRules/Reactivation_Disabled_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reactivation_Disabled_Rule</fullName>
    <active>true</active>
    <description>Only allows the System Admins to reactive user records. Excluding community users from this</description>
    <errorConditionFormula>NOT (BEGINS($Profile.Name,&quot;System Administrator&quot;))
&amp;&amp;
(BEGINS($Profile.Name,&quot;CPA&quot;))
&amp;&amp;
NOT (BEGINS(Profile.Name,&quot;Customer&quot;))
&amp;&amp;
NOT (BEGINS($Profile.Name,&quot;Salesforce Support&quot;))
&amp;&amp;
NOT (BEGINS($Profile.Name,&quot;Enterprise Support&quot;))
&amp;&amp;
NOT (PRIORVALUE( IsActive )) &amp;&amp; IsActive</errorConditionFormula>
    <errorMessage>**** Request user be reactivated via Add User tab *****</errorMessage>
</ValidationRule>