force-app/main/default/objects/User/validationRules/Sales_Org_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Org_Required</fullName>
    <active>true</active>
    <description>Makes the Sales Org required  on the user record</description>
    <errorConditionFormula>ISPICKVAL( Sales_Org__c,&quot;&quot;  ) &amp;&amp; NOT(Profile.Name = &quot;Chatter External User&quot;)</errorConditionFormula>
    <errorDisplayField>Sales_Org__c</errorDisplayField>
    <errorMessage>Sales Org is a required field</errorMessage>
</ValidationRule>