force-app/main/default/objects/User/validationRules/User_District_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>User_District_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)) ,
NOT(BEGINS($Profile.Name,&quot;Enterprise Support&quot;)) ,
NOT(BEGINS($Profile.Name,&quot;NSS Manager&quot;)), 
NOT(BEGINS($Profile.Name,&quot;Core Zone Administration&quot;)), 
NOT(BEGINS($Profile.Name,&quot;HRS Regional Sales Admin&quot;)), 
NOT(BEGINS($Profile.Name,&quot;HNBF Sales Administration&quot;)), 
NOT(BEGINS($Profile.Name,&quot;MMS Sales ZSA&quot;)),
$Profile.Name &lt;&gt;&quot;Bank Channel Manager&quot;,
$Profile.Name &lt;&gt;&quot;Sales Enablement&quot;,
$Profile.Name &lt;&gt;&quot;Sales Data Steward&quot;,
$Profile.Name &lt;&gt; &quot;BeneTrac Operations&quot;, 
$Profile.Name &lt;&gt; &quot;HRS PEO Centric Administration&quot;, 
ISCHANGED( District__c ))</errorConditionFormula>
    <errorDisplayField>District__c</errorDisplayField>
    <errorMessage>** This field can only be changed by the System Administrator or Zone Assistants**</errorMessage>
</ValidationRule>