force-app/main/default/objects/User/validationRules/User_Title_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Title_Change</fullName>
    <active>true</active>
    <description>Prevents anyone except system admin, zone assistant or Operations Delegated Administrators from changing titles (this is for CCR/ASR customized convert button).</description>
    <errorConditionFormula>AND( 
  AND(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)),
      NOT(BEGINS($Profile.Name,&quot;HRS Regional Sales Admin&quot;)),
      NOT(BEGINS($Profile.Name,&quot;Core Zone Administration&quot;)),
      NOT(BEGINS($Profile.Name,&quot;HNBF Sales Administration&quot;)),
NOT(BEGINS($Profile.Name,&quot;MMS Sales ZSA&quot;)),
                  $Profile.Name &lt;&gt;&quot;2008-09 Operations Administration&quot;,
                  $Profile.Name &lt;&gt;&quot;2008-09 MMS Hub Manager - DA&quot;,
                  $Profile.Name &lt;&gt;&quot;2008-09 HRS Premier Safety Delegated Admin&quot;, 
                  $Profile.Name &lt;&gt;&quot;2008-09 HRS Premier Support - DA&quot;,
                  $Profile.Name &lt;&gt;&quot;Field Ops Regional Assistant&quot;,
                  $Profile.Name &lt;&gt;&quot;PIA Agency Delegated Admin&quot;,
$Profile.Name &lt;&gt;&quot;HRS PEO Centric Administration&quot;,
                  $Profile.Name &lt;&gt;&quot;MPSC Profile&quot;,
                  $Profile.Name &lt;&gt;&quot;HR Essentials&quot;,
$Profile.Name &lt;&gt;&quot;Sales Data Steward&quot;,
$Profile.Name &lt;&gt;&quot;Sales Enablement&quot;
,$Profile.Name &lt;&gt; &quot;BeneTrac Operations&quot;),
            ISCHANGED(  Title ))</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>** This field can only be changed by the System Administrator, Zone Assistants or Operations Delegated Administrators **</errorMessage>
</ValidationRule>