force-app/main/default/objects/User/listViews/All_Active_PAC_Users.listView-meta.xml
<ListView>
    <fullName>All_Active_PAC_Users</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>ORM Supervisor-ESR,Operating Risk Rep-Specialist,Operating Risk Supervisor</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>ESR/ORM Rep</value>
    </filters>
    <label>All: Active PAC Users</label>
    <sharedTo>
        <roleAndSubordinates>Operating_Risk_and_Risk_Review_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>