force-app/main/default/objects/User/listViews/All_Users_no_Sales_Rep_ID.listView-meta.xml
<ListView>
    <fullName>All_Users_no_Sales_Rep_ID</fullName>
    <columns>Person_ID_Number__c</columns>
    <columns>EMPLOYEE_NUMBER</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CREATED_BY_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Person_ID_Number__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>startsWith</operation>
        <value>Core Sales Rep,MMS Sales Rep</value>
    </filters>
    <filters>
        <field>Non_Paychex_Employee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All: Users - no Sales Rep ID</label>
</ListView>