force-app/main/default/objects/User/listViews/Amplifinity_Pilot_Users.listView-meta.xml
<ListView>
    <fullName>Amplifinity_Pilot_Users</fullName>
    <booleanFilter>1 and (2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CORE DISTRICT - PORTLAND EAST,CORE SALES REP - PORTLAND EAST</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>VIRTUAL SALES CORE REP - DISTRICT 252-ESHLEMAN(PAY)</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>VIRTUAL SALES CORE DISTRICT 252-ESHLEMAN(PAY)</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>VIRTUAL SALES CORE REP - DISTRICT 251-JUZWIAK(PAY)</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CORE DISTRICT - PORTLAND WEST,CORE SALES REP - PORTLAND WEST</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CORE DISTRICT - STAMFORD WEST,CORE SALES REP - STAMFORD WEST</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>VIRTUAL SALES CORE DISTRICT 251-JUZWIAK(PAY)</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CORE DISTRICT - DALLAS,CORE SALES REP - DALLAS,CORE SALES REP - STAMFORD CENTRAL</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>CORE DISTRICT - FORT WORTH,CORE SALES REP - FORT WORTH</value>
    </filters>
    <label>Amplifinity Pilot Users</label>
</ListView>